<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".TabFragment2">

    <LinearLayout
        style="@style/myCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/football" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/football"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>


    <LinearLayout

        style="@style/myCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/basketball" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/basketball"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout

        style="@style/myCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/baseball" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/baseball"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout

        style="@style/myCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/bowling" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/bowling"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout

        style="@style/myCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/boxing" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="Boxing"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <!--<LinearLayout-->

        <!--style="@style/myCard"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="16dp">-->

        <!--<ImageView-->
            <!--android:layout_width="50dp"-->
            <!--android:layout_height="50dp"-->
            <!--android:src="@drawable/cricket" />-->

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="16dp"-->
            <!--android:layout_marginTop="8dp"-->
            <!--android:text="@string/cricket"-->
            <!--android:textAppearance="?android:attr/textAppearanceMedium" />-->

    <!--</LinearLayout>-->

    <!--<LinearLayout-->

        <!--style="@style/myCard"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="16dp">-->

        <!--<ImageView-->
            <!--android:layout_width="50dp"-->
            <!--android:layout_height="50dp"-->
            <!--android:src="@drawable/golf" />-->

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="16dp"-->
            <!--android:layout_marginTop="8dp"-->
            <!--android:text="@string/golf"-->
            <!--android:textAppearance="?android:attr/textAppearanceMedium" />-->

    <!--</LinearLayout>-->

    <!--<LinearLayout-->

        <!--style="@style/myCard"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="16dp">-->

        <!--<ImageView-->
            <!--android:layout_width="50dp"-->
            <!--android:layout_height="50dp"-->
            <!--android:src="@drawable/icehockey" />-->

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="16dp"-->
            <!--android:layout_marginTop="8dp"-->
            <!--android:text="@string/ice_hockey"-->
            <!--android:textAppearance="?android:attr/textAppearanceMedium" />-->

    <!--</LinearLayout>-->

    <!--<LinearLayout-->

        <!--style="@style/myCard"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="16dp">-->

        <!--<ImageView-->
            <!--android:layout_width="50dp"-->
            <!--android:layout_height="50dp"-->
            <!--android:src="@drawable/kart" />-->

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="16dp"-->
            <!--android:layout_marginTop="8dp"-->
            <!--android:text="@string/go_kart"-->
            <!--android:textAppearance="?android:attr/textAppearanceMedium" />-->

    <!--</LinearLayout>-->

    <!--<LinearLayout-->

        <!--style="@style/myCard"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="16dp">-->

        <!--<ImageView-->
            <!--android:layout_width="50dp"-->
            <!--android:layout_height="50dp"-->
            <!--android:src="@drawable/tennis" />-->

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="16dp"-->
            <!--android:layout_marginTop="8dp"-->
            <!--android:text="@string/tennis"-->
            <!--android:textAppearance="?android:attr/textAppearanceMedium" />-->

    <!--</LinearLayout>-->
</LinearLayout>